feat: ticket file post api
