# services/crm/app/Modules/Ticket/Routes/api.php
@@ -1,10 +1,14 @@
 <?php
 
 use App\Modules\Ticket\Http\Controllers\V1\CreateController;
+use App\Modules\Ticket\Http\Controllers\V1\UploadFileController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1/tickets')
     ->group(function () {
         Route::post('/', CreateController::class)
             ->name('api.v1.tickets.create');
+
+        Route::post('/{ticket}/files', UploadFileController::class)
+            ->name('api.v1.tickets.files.upload');
     });
